<resources>
    <string name="app_name">AbschlussAufgabe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subtitle">Online Game</string>
    <string name="infosAboutCharacters">Infos zu den Charakteren</string>
    <string name="statistics">Statistik</string>
    <string name="fight">Kampf</string>
    <string name="name">Name</string>
    <string name="clan">Clan:</string>
    <string name="rank">Rank:</string>
    <string name="natureType">Naturtyp:</string>
    <string name="titleJutsus">Jutsus:</string>
    <string name="titleUniqueTraits">einzigartige Eigenschaften:</string>
    <string name="titleTools">Werkzeug:</string>
    <string name="personal">persönliches:</string>
    <string name="family">Familie:</string>
    <string name="further">Weiter</string>
    <string name="ok">OK</string>
    <string name="random">Zufall</string>
    <string name="location">Location</string>
    <string name="playerName">Spielername</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="jutsus">Jutsus</string>
    <string name="traits">Fähigkeiten</string>
    <string name="lifePoints">Lebenspunkte</string>
    <string name="chakraPoints">Chakra</string>
    <string name="defense">Abwehr</string>
    <string name="tool">Waffe</string>
    <string name="titleDefense">Abwehr:</string>
    <string name="value">50</string>
    <string name="result">Ergebniss</string>
    <string name="userName">UserName</string>
    <string name="date">18/07/2023</string>
    <string name="titleRounds">Runden</string>
    <string name="roundWon">2</string>
    <string name="rounds">3</string>
    <string name="home">Hauptmenü</string>
    <string name="selectionCharacter">zur Charakterauswahl</string>
    <string name="again">Nochmal</string>
    <string name="titleVictorys">Siege:</string>
    <string name="titleDefeats">Niederlagen:</string>
    <string name="titleProfile">Profil</string>
    <string name="titleLastName">Name:</string>
    <string name="titleFirstName">Vorname:</string>
    <string name="titleUserName">Username:</string>
    <string name="titleBirthday">Geburtstag:</string>
    <string name="titleEmail">Email:</string>
    <string name="titlePassword">Passwort:</string>
    <string name="titlePhone">Telefonnummer:</string>
    <string name="single">Einzelkampf</string>
    <string name="team">Teamkampf</string>
    <string name="difficultyLevel">Schwierigkeitsgrad</string>
    <string name="middle">mittel</string>
    <string name="difficult">schwer</string>
    <string name="light">leicht</string>
    <string name="selection">Kampfeinstellungen</string>
    <string name="titleFight">Kampf</string>
    <string name="oneRound">1</string>
    <string name="threeRounds">3</string>
    <string name="titleTimer">Spielzeit</string>
    <string name="noLimit">kein Zeitlimit</string>
    <string name="second30">30 Sekunden</string>
    <string name="second60">60 Sekunden</string>
    <string name="second90">90 Sekunden</string>
    <string name="kniffelValue">0</string>
    <string name="one">Eins</string>
    <string name="two">Zwei</string>
    <string name="three">Drei</string>
    <string name="four">Vier</string>
    <string name="five">Fünf</string>
    <string name="six">Sechs</string>
    <string name="_3er">Dreier</string>
    <string name="_4er">Vierer</string>
    <string name="full_house">Full House</string>
    <string name="bigStreet">große Straße</string>
    <string name="littleStreet">kleine Straße</string>
    <string name="chance">Chance</string>
    <string name="kniffel">Kniffel</string>
    <string name="attemptsValue">3</string>
    <string name="rollTheDice">Würfeln</string>
    <string name="memory">Memory</string>
    <string name="games">Spiele</string>
    <string name="teamName">Team</string>
    <string name="chooseTeam">Wähle ein Team!</string>
    <string name="titleKniffel">Kniffel</string>
    <string name="details">Detaillierte Ansicht</string>
    <string name="welcome">Willkommen</string>
    <string name="registration">Anmeldung</string>
    <string name="forgotPassword">Passwort vergessen?</string>
    <string name="logIn">Log In</string>
    <string name="newHere">Neu hier?</string>
    <string name="register">Registrieren</string>
    <string name="titleRegistration">Registrierung</string>
    <string name="password">Passwort</string>
    <string name="passwordRepeat">Passwort wiederholen</string>
    <string name="cancel">Abbrechen</string>
    <string name="btnRegister">Registrieren</string>
    <string name="titlePasswordReset">Passwort zurücksetzen</string>
    <string name="requestPassword">Passwort anfordern</string>
    <string name="verifyEmail">Sie bekommen in Kürze eine Email. \nBitte klicken Sie auf den Link und verifizieren Sie ihre Email-Adresse.</string>
    <string name="editProfile">Profil bearbeiten</string>
    <string name="save">Speichern</string>
    <string name="logout">Ausloggen</string>
    <string name="deleteAccount">Account löschen</string>
    <string name="guest">Gast</string>
    <string name="createProfile">Pofil erstellen</string>
    <string name="textMandatoryField">Pflichtfelder sind mit einem * makiert</string>
    <string name="requestMandatoryField">"Bitte fülle die Pflichtfelder aus!"</string>
    <string name="settings">"Einstellungen"</string>
    <string name="lastName">Nachname</string>
    <string name="firstName">Vorname</string>
    <string name="e_mail">E-Mail</string>
    <string name="birthday">Geburtstag</string>
    <string name="homeTown">Wohnort</string>
    <string name="titleHomeTown">Wohnort:</string>
    <string name="newGame">Neues Spiel</string>
    <string name="reselectDice">Würfel neu wählen</string>
    <string name="volume">Lautstärke</string>
    <string name="fontSize">Schriftgröße</string>
    <string name="timer">Timer</string>
    <string name="continueAsGuest">als Gast weiter machen</string>
    <string name="scissorsRockPaper">Schere - Stein - Papier</string>
    <string name="scissors">Schere</string>
    <string name="rock">Stein</string>
    <string name="paper">Papier</string>
    <string name="computer">Computer</string>
    <string name="help">Hilfe</string>
</resources>