<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EditProfileFragment">

        <TextView
            android:id="@+id/tv_titleProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/editProfile"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mc_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleProfile">


            <ImageView
                android:id="@+id/iv_profilePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_profile_image"
                android:scaleType="centerCrop"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_titleLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:text="@string/titleLastName"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mc_profile" />

        <TextView
            android:id="@+id/tv_titleFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titleFirstName"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_titleLastName"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleLastName" />

        <TextView
            android:id="@+id/tv_titleUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titleUserName"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_titleFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleFirstName" />

        <TextView
            android:id="@+id/tv_titleBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titleBirthday"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_titleUserName"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleUserName" />

        <TextView
            android:id="@+id/tv_titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titleEmail"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_titlePhone"
            app:layout_constraintTop_toBottomOf="@+id/tv_titlePhone" />


        <TextView
            android:id="@+id/tv_titlePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titlePhone"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_titleBirthday"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleBirthday" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_firstName"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:layout_marginStart="80dp"
            android:hint=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_titleLastName"
            app:layout_constraintStart_toEndOf="@+id/tv_titleLastName"
            app:layout_constraintTop_toTopOf="@+id/tv_titleLastName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_lastName"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:hint=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_titleFirstName"
            app:layout_constraintStart_toStartOf="@+id/tiet_firstName"
            app:layout_constraintTop_toTopOf="@+id/tv_titleFirstName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_userName"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:hint=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_titleUserName"
            app:layout_constraintStart_toStartOf="@+id/tiet_lastName"
            app:layout_constraintTop_toTopOf="@+id/tv_titleUserName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_birthday"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:hint=""
            app:layout_constraintBottom_toBottomOf="@+id/tv_titleBirthday"
            app:layout_constraintStart_toStartOf="@+id/tiet_userName"
            app:layout_constraintTop_toTopOf="@+id/tv_titleBirthday" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_phone"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:hint=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_titlePhone"
            app:layout_constraintStart_toStartOf="@+id/tiet_birthday"
            app:layout_constraintTop_toTopOf="@+id/tv_titlePhone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="200dp"
            android:layout_height="30sp"
            android:hint=""
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_titleEmail"
            app:layout_constraintStart_toStartOf="@+id/tiet_phone"
            app:layout_constraintTop_toTopOf="@+id/tv_titleEmail" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>